--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ croniter==1.4.1
 dateutils==0.6.12
 deepdiff==6.4.1
 docker-pycreds==0.4.0
+exceptiongroup==1.1.3
 fastapi==0.103.1
 filelock==3.9.0
 frozenlist==1.4.0
@@ -33,8 +34,11 @@ grpcio==1.57.0
 h11==0.14.0
 huggingface-hub==0.16.4
 idna==3.4
+iniconfig==2.0.0
 inquirer==3.1.3
 itsdangerous==2.1.2
+Jinja2==3.1.2
+jinxed==1.2.0
 lightning==2.0.8
 lightning-cloud==0.5.37
 lightning-utilities==0.9.0
@@ -44,23 +48,39 @@ MarkupSafe==2.1.2
 mdurl==0.1.2
 mpmath==1.2.1
 multidict==6.0.4
+networkx==3.1
 numpy==1.25.2
+oauthlib==3.2.2
 ordered-set==4.1.0
 packaging==23.1
 pandas==2.1.0
 pathtools==0.1.2
 Pillow==9.3.0
+pluggy==1.3.0
 protobuf==4.24.2
 psutil==5.9.5
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycparser==2.21
+pydantic==2.1.1
+pydantic_core==2.4.0
+Pygments==2.16.1
+PyJWT==2.8.0
+pytest==7.4.2
 python-dateutil==2.8.2
 python-editor==1.0.4
 python-multipart==0.0.6
 pytorch-lightning==2.0.8
 pytz==2023.3.post1
 PyYAML==6.0.1
+readchar==4.0.5
 regex==2023.8.8
+requests==2.31.0
+requests-oauthlib==1.3.1
 rich==13.5.2
+rsa==4.9
 safetensors==0.3.3
+sentencepiece==0.1.99
 sentry-sdk==1.30.0
 setproctitle==1.3.2
 six==1.16.0
@@ -74,6 +94,7 @@ sympy==1.11.1
 tensorboard==2.14.0
 tensorboard-data-server==0.7.1
 tokenizers==0.13.3
+tomli==2.0.1
 -f https://download.pytorch.org/whl/torch_stable.html
 torch==2.0.1+cu118
 torch-tb-profiler==0.4.1
